--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@ai-sdk/google": "^1.1.14",
     "@hono/node-server": "^1.13.8",
+    "@octokit/rest": "^21.1.1",
     "@playwright/browser-chromium": "^1.50.1",
     "ai": "^4.1.41",
     "dotenv": "^16.4.7",
@@ -16,7 +17,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
+    "@types/node": "^22.13.4",
     "tsx": "^4.7.1"
   }
 }
